<resources>
    <string name="app_name">CashRegister</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="cancel">C</string>
    <string name="buy">BUY</string>
    <string name="manager">MANAGER</string>
    <string name="detailProduct">Product:</string>
    <string name="detailPrice">Price:</string>
    <string name="purchaseDate">Purchase Date:</string>
    <string name="ok">OK</string>
    <string name="erase">Cancel</string>
    <string name="newQ">Enter new quantity</string>








</resources>